stylesheet.css
/* ... */
/*
    End of Naut
    Add your customizations and addons below!
-------------------------------------------------------------------------- */

/* Addon: User Flair Images */
.flair:before {
    display: inline-block;
    width: 16px;
    height: 16px;
    margin-right: 6px;
    margin-left: 4px;
    content: "";
    background-image: url(%%spritesheet-flair%%);
    background-size: 100% 100%;
    background-position: 0px 0px;
    vertical-align: top;
    position: relative;
    top: -1px;
}

/* The "one", "two", etc.. are the names you fill in in the "css" input field on the /r/.../about/flair page. */
.flair-sensics:before{background-position:0 -0; width: 59}
.flair-osvr:before{background-position:0 -16px}
.flair-razer:before{background-position:0 -32px}
/* End Addon */

/* Addon: Custom Snoo */
#header-img.default-header, #header-img {
    background: url(%%snoo%%) no-repeat 0px 0px;
}

    #header-img.default-header:hover, #header-img:hover {
        background-position: 0px 0px;
    }
/* End Addon */

/* Addon: Modify Sidebar Image */
.side::before {
    width: 232px;
    margin-left: 44px;
    margin-right: 44px:
}
/* End Addon */

